--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ bower_components
 # node-waf configuration
 .lock-wscript
 package-lock.json
+package.json
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
@@ -81,7 +82,8 @@ typings/
 # Nuxt.js build / generate output
 .nuxt
 dist
-
+build
+public
 # Gatsby files
 .cache/
 # Comment in the public line in if your project uses Gatsby and *not* Next.js
